# pump-trace

./: .gitignore  Cargo.toml
pump_data/2025/07/27/token_launch/: batch_021456_22a98834ff3648e798cc8ca5ce7a37ad.parquet  batch_021508_37d337c5b1a84af097eea9e4e4118c57.parquet  batch_021511_2ff7fdd5308f44389994254ec4765e74.parquet  batch_021543_79527295522b40f290c5e189e1dfc336.parquet  batch_021559_21ebab5310234da29f1cfa81e6014beb.parquet  batch_021609_deed129b49c8412e83837b9b90513de7.parquet  batch_021614_4ba4e5275d7342a3a82af8494164d7cb.parquet  batch_021627_13d8867307c843f483ce50a6096bfa24.parquet  batch_021642_61b844f937bb4747b1fc5f7a00cab329.parquet  batch_021646_101bf186d4f24061a3df4218156e252a.parquet  batch_021714_6fff8cbf9c7f4ce4912f40d10781e829.parquet
src/: arrow.rs  datafusion_query.rs  ingest.rs  main.rs  parquet_storage.rs  postgres_db.rs  process_data.rs
