[package]
name = "pumptrace"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
futures = "0.3.28"
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
arrow2 = "0.18.0"