[package]
name = "pumptrace"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
futures = "0.3.28"
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
arrow2 = "0.18.0"
arrow = "55.2.0"
parquet = "55.2.0"
chrono = "0.4.41"
uuid = {version = "1.4.1", features = ["v4"]}
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "decimal", "offline"]}
